# NBLM-small

./: .env.example  .gitignore  README.md  run_app.ps1  test_pdf.py  test_suite.py
app/: main.py  requirements.txt
app/application/: __init__.py  code_interpreter_usecase.py  delete_usecase.py  graph_usecase.py  memory_daemon.py  podcast_usecase.py  quiz_usecase.py  rag_usecase.py  slide_usecase.py  studio_usecase.py  summary_usecase.py  synthesis_usecase.py  upload_usecase.py
app/core/: __init__.py  config.py  events.py
app/core/cv_engine/: CMakeLists.txt  vision_processor.cpp
app/core/protos/: vision.proto  vision_pb2.py  vision_pb2_grpc.py
app/domain/: __init__.py  interfaces.py  models.py
app/infrastructure/: __init__.py  browser_agent.py  code_executor.py  fallback_llm.py  gemini_adapter.py  groq_adapter.py  mistral_adapter.py  network_healer.py  openrouter_adapter.py  sambanova_adapter.py  screen_capture.py  vector_store.py  vision_adapter.py  web_search.py
app/presentation/: __init__.py  api.py
app/static/: index.html  slide_preview.html
app/workers/: vision_grpc_server.py
